auth-service/target/debug/build/eyre-7a14ec2581dbfb7a/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /Users/macbookair/Desktop/Siddhesh/Authentication Service using Actix/Authentication_Service_Actix/auth-service/target/debug/build/eyre-7a14ec2581dbfb7a/out/probe.rs:2:16
  |
2 |     #![feature(backtrace)]
  |                ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
